# rebirth

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  build.sh  imgui.ini  run.sh
rebirth/: CMakeLists.txt
rebirth/include/rebirth/: animation.h  application.h  application_state.h  camera.h  gltf.h  math.h  primitives.h  renderer.h  resource_manager.h  scene.h  transform.h  types.h
rebirth/src/: application.cpp  camera.cpp  gltf.cpp  main.cpp  precompiled.cpp  primitives.cpp  renderer.cpp  resource_manager.cpp  transform.cpp
rebirth/src/core/: application.cpp  camera.cpp  cvar_system.cpp  gltf.cpp  precompiled.cpp  scene.cpp
rebirth/src/game/: game.cpp
rebirth/src/graphics/: primitives.cpp  render_settings.cpp  renderer.cpp  renderer_debug.cpp  renderer_passes.cpp
rebirth/src/input/: input.cpp
rebirth/src/math/: aabb.cpp  bounds.cpp  frustum.cpp  frustum_culling.cpp  perspective.cpp  projection.cpp  sphere.cpp  transform.cpp
rebirth/src/physics/: physics_car.cpp  physics_system.cpp  rigid_body.cpp
rebirth/src/pipelines/: imgui_pipeline.cpp  mesh_pipeline.cpp  shadow_pipeline.cpp  skybox_pipeline.cpp  wireframe_pipeline.cpp
rebirth/src/types/: camera.cpp  mesh.cpp  scene.cpp
rebirth/src/util/: filesystem.cpp
rebirth/src/vulkan/: descriptor_manager.cpp  descriptor_writer.cpp  graphics.cpp  swapchain.cpp  util.cpp
src/: CMakeLists.txt  main.cpp
src/rebirth/: application.cpp  application.h  camera.cpp  gltf.cpp  gltf.h  math.h  precompiled.cpp  renderer.cpp  renderer.h  transform.cpp  transform.h  types.h
(+119 files in other folders)
